@@ -313,8 +313,7 @@
             T
         </td>
         <td style="color:#0000ff" nowrap>
-          <nil>
-          </nil>
+          Switch to editing mode
         </td>
       </tr>
       <tr>
@@ -325,8 +324,7 @@
           Less
         </td>
         <td style="color:#0000ff" nowrap>
-          <nil>
-          </nil>
+          Switch to editing mode
         </td>
       </tr>
       <tr>
@@ -1627,7 +1625,7 @@ Or do corners actions
           
         </td>
         <td align="center" nowrap>
-          Motion
+          Clfswm  motion
         </td>
         <td style="color:#0000ff" nowrap>
           Grab text
