@@ -31,8 +31,8 @@ Main mode keys:
   Mod-1 Control Shift  Escape          Kill focus window: Destroy the focus window in all frames and workspaces
   Control              Escape          Remove the focus window in the current frame
   Shift                Escape          Unhide all hidden windows into the current child
-  Mod-1                T               NIL
-  Control              Less            NIL
+  Mod-1                T               Switch to editing mode
+  Control              Less            Switch to editing mode
   Mod-1                |1|             Bind or jump to a slot
   Mod-1                |2|             Bind or jump to a slot
   Mod-1                |3|             Bind or jump to a slot
@@ -171,7 +171,7 @@ Mouse buttons actions in info mode:
                        2               Leave the info mode
                        4               Move one line up
                        5               Move one line down
-                       Motion          Grab text
+                       Clfswm::motion   Grab text
 
 
 
