@@ -93,9 +93,6 @@
       a: <a href="#FRAME-ADDING-MENU">< Adding frame menu ></a>
     </p>
     <p>
-      x: Maximize/Unmaximize the current frame in its parent frame
-    </p>
-    <p>
       l: <a href="#FRAME-LAYOUT-MENU">< Frame layout menu ></a>
     </p>
     <p>
@@ -112,6 +109,9 @@
     </p>
     <p>
       s: <a href="#FRAME-MISCELLANEOUS-MENU">< Frame miscallenous menu ></a>
+    </p>
+    <p>
+      x: Maximize/Unmaximize the current frame in its parent frame
     </p>
     <hr>
     <h3>
