@@ -1,5 +1,8 @@
 2009-05-10  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-circulate-mode.lisp (reorder-brother): Handle
+	root-frame correctly.
+
 	* clfswm.asd: Dependency fix for clfswm-generic-mode.
 
 	* src/clfswm-circulate-mode.lisp (reorder-child)
